# fractatoe

./: .gitignore  Cargo.toml  README.md  create_and_render.py  create_and_show.py  flame.json  julia.json  mandelbrot.json  rendering_only.json
fractatoe/: Cargo.toml
fractatoe/src/: image.rs  lib.rs
fractatoe/src/fractals/: dynamic.rs  flame.rs  histogram.rs  julia.rs  mandelbrot.rs  mod.rs
fractatoe/src/rendering/: flame_rendering.rs  gaussian_rendering.rs  mandelbrot_rendering.rs  mod.rs
histogram_generator/: Cargo.toml
histogram_generator/src/: config.rs  main.rs  png_save.rs  test.rs  window.rs
histogram_renderer/: Cargo.toml
histogram_renderer/src/: config.rs  main.rs  png_save.rs  window.rs
samples/: julia.json  mandelbrot.json  mandelbrot_zoomed.json  rendering_gaussian.json  rendering_greyscale.json  sierpinsky.json
src/: fractal.rs  image.rs  main.rs  png_save.rs  window.rs
src/fractals/: flame.rs  julia.rs  mandelbrot.rs  mod.rs  rendering.rs
src/rendering/: flame_rendering.rs  gaussian_rendering.rs  mandelbrot_rendering.rs  mod.rs
