[package]
name = "flame_fractal"
version = "0.1.0"
authors = ["jetSett <joel.felderhoff@ens-lyon.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.23.0"
pixels = "0.2.0"
log = "0.4.11"
env_logger = "0.8.2"
num = "0.3.1"
winit_input_helper = "0.8.0"
argh = "0.1.4"
