[package]
name = "fractatoe"
version = "0.1.0"
authors = ["jetSett <joel.felderhoff@ens-lyon.fr>"]
edition = "2018"

[dependencies]
pixels = "0.2.0"
log = "0.4.11"
num = "0.3.1"
winit_input_helper = "0.8.0"
rand = "0.7.3"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.60"
rand_seeder = "0.2.1"
