[package]
name = "fractatoe_histogram_generator"
version = "0.1.0"
authors = ["jetSett <joel.felderhoff@ens-lyon.fr>"]
edition = "2018"

[dependencies]
winit = "0.23.0"
argh = "0.1.4"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.60"
fractatoe = { path = "../fractatoe" }
env_logger = "0.8.2"
png = "0.16.8"
log = "0.4.11"
pixels = "0.2.0"
