[package]
name = "fractatoe_histogram_renderer"
version = "0.1.0"
authors = ["jetSett <joel.felderhoff@ens-lyon.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.4"
fractatoe = { path = "../fractatoe" }
env_logger = "0.8.2"
png = "0.16.8"
log = "0.4.11"
pixels = "0.2.0"
winit = "0.23.0"
anyhow = "1.0.36"
serde_json = "1.0.60"
serde_derive = "1.0.117"
serde = "1.0.117"
